# neunetwork

./: .gitignore  README.md  pyproject.toml  requirements.txt  resize_to_28.py
configs/: default.yaml
docs/: NN SRS V2.md  NN Solution Design V2.md
neunet/: __init__.py  cli.py  config.py  data.py  eval.py  infer.py  info.py  models.py  report.py  report_train.py  train.py  utils.py
tests/: conftest.py  test_cli_flow.py  test_cli_help.py  test_e2e_flow.py
utilities/: calc_norm.py  export_mnist_images.py  mcnemar_test.py
